@startuml

'skinparam linetype polyline
sprite $primary [17x12/16z] bOqv3e1030CJRzPn9Fx_NWY7n4eqJ3TJs6OVa5pTpD-5tl3YyFHG-4DsqAOnWgawWp0r0KGagDuGMYMJxbMrBxzLPJ_O0G00

!define table(x) class x << (T,#FFAAAA) >>
!define pk(x) <$primary> <u>x</u>
!define fk(x) <&key> <i>x</i>

hide methods
hide stereotypes

table(MenuModel) {
  +pk(id)
  +name: String
  +description: String?
  +image: String?
  +price: Number
  +tags: String[]
}

table(OrderModel) {
  +pk(id)
}

table(OrderMenu) {
  +pk(id)
  +fk(menu_id)
  +fk(bill_id)
  +quantity: Number
  +ordered_time: DateTime
}

OrderMenu::menu_id --> "n" MenuModel::id
OrderMenu::bill_id --> "n" OrderModel::id
@enduml
